Test CI/CD pipeline

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
     </style>
 </head>
+<!-- Added this comment to test CI/CD -->
 <body class="bg-offwhite min-h-screen flex flex-col text-blueprimary">
     <header class="bg-blueprimary text-white p-2 xs:p-3 sm:p-4">
         <h1 class="text-base xs:text-xl sm:text-2xl md:text-3xl font-bold text-center">Expense Tracker</h1>
